Update and rename neps.md to neps-2023.md

--- a/_talks/neps-2023.md
+++ b/_talks/neps-2023.md
@@ -2,7 +2,7 @@
 title: "Jan Tinbergen European Peace Science Conference"
 collection: talks
 type: "Presentation"
-permalink: /talks/atk-2022
+permalink: /talks/neps-2023
 venue: "University of Bologna"
 date: 2023-06-26
 location: "Bologna, Italy"
