--- a/_talks/c&c-2024.md
+++ b/_talks/c&c-2024.md
@@ -7,4 +7,4 @@ venue: "University College London"
 date: 2024-03-12
 location: "London, UK"
 ---
-Presented ongoing work *'Spread of Protest Onset: The role of urban centers in national level protests'* as part of the Conflict & Change PhD workshop.
+Presented ongoing work *'Spread of Protest Onset: The role of urban centers in national level protests'* as part of the 2024 Conflict & Change PhD workshop.
